css/style.css
@import url('https://fonts.googleapis.com/css?family=Barlow:400,500,700|Tomorrow:400,700&display=swap');
@import url(https://fonts.googleapis.com/css?family=Permanent+Marker);

:root {
    --gradient-start: #08082e;
    --gradient-end: #140d4c;
    --intro-color: #111026CC;
    --blue-color: #00f0ff;
    --main-color: #FF0FF8;
    --secondary-color: #F3C8F3;
    --shadow-color: #f008b7
}

body {
    font: 15px/1.5 Barlow, sans-serif;
    padding: 0;
    margin: 0;
    background-color: #1C1E22;
    color: white;
}

/* Global */
.container {
    width: 80%;
    margin: auto;
    overflow: hidden;
}

ul {
    margin: 0;
    padding: 0;
}

/* Header */
header {
    background: var(--gradient-start); /* Old browsers */
    background: -moz-linear-gradient(left, var(--gradient-start) 0%, var(--gradient-end) 45%); /* FF3.6-15 */
    background: -webkit-linear-gradient(left, var(--gradient-start) 0%, var(--gradient-end) 45%); /* Chrome10-25,Safari5.1-6 */
    background: linear-gradient(to right, var(--gradient-start) 0%, var(--gradient-end) 45%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
    color: #ffffff;
    padding-top: 30px;
    min-height: 70px;
    border-bottom: #D948C1 3px solid;
    z-index: 100;
}

header a {
    color: #ffffff;
    text-decoration: none;
    text-transform: uppercase;
    font-size: 16px;
}

header li {
    float: left;
    display: inline;
    padding: 0 20px 0 20px;
}

header #name {
    float: left;
}

header #name h1 {
    margin: 0;
}

header nav {
    float: right;
    margin-top: 10px;
}

header .highlight, header .current a {
    color: #D948C1;
    font-weight: bold;
}

header a:hover {
    color: #3DDCEF;
    font-weight: bold;
}

/* Header scrolling */

.sticky {
    position: fixed;
    top: 0;
    width: 100%;
}

.sticky + .content {
    padding-top: 102px;
}

/* Showcase */

/* CSS based off https://codepen.io/boldfacedesign/pen/EoGgD */

.welcome {
    position: relative;
    font-family: 'Permanent Marker', cursive;
    font-variant: small-caps;
    font-size: 180px;
    -webkit-transform: skew(-15deg, -15deg);
    padding-left: 80px;
    background-image: -webkit-linear-gradient(var(--main-color), #f9f9f7);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    margin: 0;
    -webkit-filter: drop-shadow(2px 2px 20px var(--shadow-color));
}


#showcase {
    height: 100vh;
    width: 100%;
    background: url('../img/night_city.png') no-repeat fixed center;
    background-size: cover;
    margin: auto;
    display: block;
    text-align: center;
    color: #ffffff;
}

#showcase h1 {
    margin-top: 100px;
    margin-bottom: 100px;
}

#showcase p {
    font-size: 20px;
}

/* Box */
#boxes {
    margin-top: 20px;
}

#boxes .box {
    text-align: center;
    font-size: 14px;
    color: #ffffff;
}

#boxes img {
    height: 180px;
}

.box {
    width: 50%;
    float: left;
}

iframe {
    height: 100vh;
    width: 100%;
    border: none;
}

/* Intro styling from https://dev.to/leandroruel/how-to-make-a-cyberpunk-2077-button-with-css-c9m*/
.blink {
    animation: blinker 500ms linear infinite;
}

@keyframes blinker {
    50% {
        opacity: 0;
    }
}

.intro {
    width: 60%;
    margin: auto;
    height: 60px;
    border: 0;
    outline: none;
    cursor: pointer;
    position: relative;
    font-family: Tomorrow, sans-serif;
    font-size: .85rem;
    text-transform: uppercase;
    color: white;
    clip-path: polygon(92% 0, 100% 25%, 100% 100%, 8% 100%, 0% 75%, 0 0);
}

.intro__content {
    display: flex;
    align-items: center;
    justify-content: center;
    position: absolute;
    top: 2px;
    left: 2px;
    right: 2px;
    bottom: 2px;
    background-color: var(--intro-color);
    clip-path: polygon(92% 0, 100% 25%, 100% 100%, 8% 100%, 0% 75%, 0 0);
}

.intro__label {
    font-size: .40rem;
    position: absolute;
    bottom: -1px;
    right: 8%;
    padding: 0 5px;
    background-color: var(--intro-color);
    z-index: 3;
    border-left: 1px solid var(--blue-color);
}

.intro__glitch {
    display: none;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: var(--intro-color);
    filter: drop-shadow(-2px 3px white) drop-shadow(-1px -3px #ffffff) drop-shadow(2px 1px white);
}

/* Footer */
footer {
    margin-bottom: 20px;
    color: #ffffff;
    text-align: center;
}

/* Movies */
#movie-table {
    width: 100%;
    text-align: center;
    vertical-align: middle;
    border-collapse: collapse;
    border-style: hidden;
}

#movie-table td {
    padding: 10px;
}

#movie-table tr:nth-child(even) {
    background-color: #32353c;
}

.imdb {
    height: 50px !important;
}

#movie-table img {
    height: 180px;
    vertical-align: middle;
}

/* Hobbies */

/* Image hover effect from https://codepen.io/knyttneve/pen/YgZbLO */
.gallery-container {
    display: flex;
    width: 100%;
    padding: 4% 2%;
    box-sizing: border-box;
    height: 100vh;
}

.gallery-box {
    flex: 1;
    overflow: hidden;
    transition: .5s;
    margin: 0 2%;
    box-shadow: 0 20px 30px rgba(0, 0, 0, .1);
    line-height: 0;
}

.gallery-box > img {
    width: 200%;
    height: calc(100% - 10vh);
    object-fit: cover;
    transition: .5s;
}

.gallery-box > span {
    font-size: 3.8vh;
    display: block;
    text-align: center;
    height: 10vh;
    line-height: 2.6;
    background: #0D0D0D;
}

.gallery-box:hover {
    flex: 1 1 50%;
}

.gallery-box:hover > img {
    width: 100%;
    height: 100%;
}

/* Resume */

#resumeBody {
    font-family: 'Lato', serif;
    color: white;
}

#resume {
    width: 100%;
}

#profilePic {
    padding-top: 10px;
    border-radius: 50%;
    width: 100px;
    height: 100px;
    margin: auto;
    display: block;
}

.sidebar {
    height: 100%;
    width: 300px;
    position: fixed;
    z-index: 1;
    top: 0;
    left: 0;
    overflow-x: hidden;
}

#aside-box {
    width: calc(100% - 20px);
    float: left;
    text-align: center;
    margin: 10px;
    border: 1px solid #e6e6e6;
    border-radius: 3px;
    background-color: #0D0D0D;
}

.main {
    padding: 10px;
    margin: 10px 10px 10px 310px;
    background-color: #0D0D0D;
    border: 1px solid #e6e6e6;
    border-radius: 3px;
}

.main ul {
    list-style-type: circle;
    padding-left: 40px;
}

.bolded {
    font-weight: bold;
}

/* Projects */
#project-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.project-item {
    flex: 1;

}

.project-item a {
    margin-right: 20px;
}

.project-link {
    width: 100%;
    display: flex;
    justify-content: center;
    font-size: 40px;
}


/* Media Queries */
@media (max-width: 768px) {
    header #name,
    header nav,
    header nav li,
    #boxes .box {
        float: none;
        text-align: center;
        width: 100%;
    }

    header {
        padding-bottom: 20px;
    }

    #Showcase h1 {
        margin-top: 40px;
    }
}

